hphp/test/slow/typedef/typedef_class_fail1.php.expectf

Fatal error: Failure to resolve undefined class Foo in %s on line 8
